--- a/components/home.html
+++ b/components/home.html
@@ -22,7 +22,7 @@
         <div class="glass-effect p-6 rounded-xl hover-scale">
             <h2 class="text-2xl font-bold mb-4 text-primary">About</h2>
             <p class="text-black mb-4 text-justify">
-                The Creative, Controllable & Cognitive Computing Group (C4G) at HKUST, founded in 2024, pioneers
+                The YU-Vision-Group at GBU, founded in 2024, pioneers
                 cutting-edge research at the intersection of creative, controllable content generation, and
                 cognitive
                 intelligence for visual and multimodal systems. We fuse creative AI (e.g., image/video, 3D/4D
@@ -30,13 +30,11 @@
                 advancement (e.g., multimodal reasoning, human-AI interaction) to develop explosive innovations
                 that bridge theory and real-world impact.
             </p>
-            <h2 class="text-2xl font-bold mb-4 text-primary">Why C4 Group</h2>
+            <h2 class="text-2xl font-bold mb-4 text-primary">Why YU-Vision-Group</h2>
             <p class="text-black mb-4 text-justify">
                 Like the explosive potential of its namesake, our group delivers high-impact
-                solutions — validated by awards, patents, and publications at top conferences/journals. <a
-                    href="https://whluo.github.io/assets/join_us.html" target="_blank"
-                    class="text-blue hover:text-accent transition-colors duration-300">Join us</a> to
-                redefine the frontiers of intelligent content creation and multimodal computing.
+                solutions — validated by awards, patents, and publications at top conferences/journals. 
+                Redefine the frontiers of intelligent content creation and multimodal computing.
             </p>
 
         </div>
