--- a/components/home.html
+++ b/components/home.html
@@ -110,20 +110,19 @@
             <div class="space-y-4 max-h-28 overflow-y-auto pr-2 news-scroll">
                 <div class="flex items-start">
                     <div class="text-black text-sm w-24 flex-shrink-0">2026 Jan</div>
-                    <div class="text-black">UNIC is accepted by ICLR 2026.</div>
+                    <div class="text-black">We organize the 2nd Workshop & Challenge on Subtle Visual Computing (SVC) @ CVPR 2026.</div>
                 </div>
                 <div class="flex items-start">
-                    <div class="text-black text-sm w-24 flex-shrink-0">2025 Sep</div>
-                    <div class="text-black"><a href="https://meigen-ai.github.io/multi-talk/"
-                            target="_blank">Multitalk</a> and Freecure are accepted by NeurIPS 2025.</div>
+                    <div class="text-black text-sm w-24 flex-shrink-0">2025 Dec</div>
+                    <div class="text-black">Two papers on facial AU detection and fine-grained recognition are accepted by IEEE TIP and TMM.</div>
                 </div>
                 <div class="flex items-start">
-                    <div class="text-black text-sm w-24 flex-shrink-0">2025 June</div>
-                    <div class="text-black">MaterialMVP and MOERL are accepted by ICCV 2025.</div>
+                    <div class="text-black text-sm w-24 flex-shrink-0">2025 Nov</div>
+                    <div class="text-black">Six papers on VLA/audio-visual/face anti-spoofing/action recognition are accepted by AAAI'26 (3 Oral).</div>
                 </div>
                 <div class="flex items-start">
-                    <div class="text-black text-sm w-24 flex-shrink-0">2025 June</div>
-                    <div class="text-black">Our group website is established.</div>
+                    <div class="text-black text-sm w-24 flex-shrink-0">2025 Aug</div>
+                    <div class="text-black">One paper on continual face anti-spoofing is accepted by IEEE TPAMI.</div>
                 </div>
             </div>
         </div>
