--- a/components/people.html
+++ b/components/people.html
@@ -16,27 +16,27 @@
                     <div class="flex flex-col items-center md:items-start md:w-1/4 md:pl-12">
 
                         <div class="w-32 h-32 rounded-full overflow-hidden mb-4 border-2 border-primary/30">
-                            <a href="https://whluo.github.io" target="_blank">
-                                <img src="assets/people/wenhan_square.png" alt="Dr. Wenhan Luo"
+                            <a href="https://zitongyu.github.io/" target="_blank">
+                                <img src="assets/people/zitong.png" alt="Dr. Zitong Yu"
                                     class="w-full h-full object-cover">
                             </a>
                         </div>
 
-                        <h4 class="text-xl font-bold">Dr. Wenhan Luo</h4>
+                        <h4 class="text-xl font-bold">Dr. Zitong Yu</h4>
                         <p class="text-gray-700 text-sm mb-4">Principal Investigator</p>
                         <div class="flex space-x-8">
-                            <a href="mailto:whluo@ust.hk"
+                            <a href="mailto:zitong.yu@ieee.org"
                                 class="text-gray-400 hover:text-primary transition-colors duration-300" title="Email">
                                 <i class="fas fa-envelope fa-lg"></i>
                             </a>
 
-                            <a href="https://whluo.github.io" target="_blank"
+                            <a href="https://zitongyu.github.io/" target="_blank"
                                 class="text-gray-400 hover:text-primary transition-colors duration-300"
                                 title="Homepage">
                                 <i class="fas fa-home fa-lg"></i>
                             </a>
 
-                            <a href="https://scholar.google.com.hk/citations?user=g20Q12MAAAAJ" target="_blank"
+                            <a href="https://scholar.google.com/citations?user=ziHejLwAAAAJ&hl=en" target="_blank"
                                 class="text-gray-400 hover:text-primary transition-colors duration-300"
                                 title="Google Scholar">
                                 <i class="fas fa-graduation-cap fa-lg"></i>
@@ -46,18 +46,9 @@
                     </div>
                     <div class="md:w-2/3">
                         <div class="grid grid-cols-1 gap-4">
-                            <p class="text-black text-justify">Associate Professor at HKUST, PhD from Imperial
-                                College London. Former research scientist at Tencent and Amazon, developing deep
-                                learning solutions for products like WeChat, QQ, Tencent Video, Tencent Yuanbao,
-                                Tencent Cloud, and myapp.</p>
-                            <p class="text-black text-justify">Published 100+ papers in top venues (CVPR,
-                                ICML, NeurIPS,
-                                etc.). CVPR 2019 Best Paper Finalist, 2022 ACM China Rising Star Award
-                                (Guangzhou
-                                Chapter), Top 2% Scientist worldwide (2023, 2024 & 2025).</p>
-                            <p class="text-black text-justify">Serves as Senior Area Editor for IEEE SPL,
-                                Associate Editor for IEEE TIP, and Area Chair for
-                                ICLR/NeurIPS/ICML/IJCAI/ACM-MM/BMVC.</p>
+                            <p class="text-black text-justify">Associate Professor (Tenured) at Great Bay University, leading the YU Vision (YUV) Group. Previously a Postdoctoral researcher at ROSE Lab, Nanyang Technological University, and a visiting scholar at TVG, University of Oxford.</p>
+                            <p class="text-black text-justify">PhD from University of Oulu (2022). Recipient of Excellent Young Scholars (Overseas) Fund (国家优青海外). Research interests include computer vision, biometric security, and multimodal learning.</p>
+                            <p class="text-black text-justify">Serves as Associate Editor for Machine Intelligence Research (MIR) and Frontiers in Artificial Intelligence, and CAE for IEEE TIFS. Published papers in top venues including TPAMI, IJCV, TIP, CVPR, ICCV, etc.</p>
                         </div>
                     </div>
                 </div>
