--- a/components/footer.html
+++ b/components/footer.html
@@ -1,5 +1,5 @@
 <!-- Copyright Section -->
 <section class="py-8 px-4 sm:px-6 lg:px-8 bg-white text-black text-center">
     <p>YU-Vision-Group @ GBU, Copyright 2025<br>
-        Greater Bay Area University, Dongguan, China</p>
+        Great Bay University, Dongguan, China</p>
 </section>
