--- a/components/people.html
+++ b/components/people.html
@@ -16,7 +16,7 @@
                     <div class="flex flex-col items-center md:items-start md:w-1/4 md:pl-12">
 
                         <div class="w-32 h-32 rounded-full overflow-hidden mb-4 border-2 border-primary/30">
-                            <a href="https://zitongyu.github.io/" target="_blank">
+                            <a href="https://wz1h1ng.github.io/" target="_blank">
                                 <img src="assets/people/zitong.png" alt="Dr. Zitong Yu"
                                     class="w-full h-full object-cover">
                             </a>
@@ -30,7 +30,7 @@
                                 <i class="fas fa-envelope fa-lg"></i>
                             </a>
 
-                            <a href="https://zitongyu.github.io/" target="_blank"
+                            <a href="https://wz1h1ng.github.io/" target="_blank"
                                 class="text-gray-400 hover:text-primary transition-colors duration-300"
                                 title="Homepage">
                                 <i class="fas fa-home fa-lg"></i>
